--- a/InifniteAutoScrollingGallery/index.html
+++ b/InifniteAutoScrollingGallery/index.html
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" href="https://use.typekit.net/zvj1jsw.css">
     <!--script src="//tympanus.net/codrops/adpacks/analytics.js"></script-->
-  <link href="main.d263f564555a055f4d35.css" rel="stylesheet"></head>
+  </head>
 
   <body data-id="0">
     <main>
@@ -92,5 +92,5 @@
     </main>
 
     <!--script src="https://tympanus.net/codrops/adpacks/cda.js"></script-->
-  <script type="text/javascript" src="main.aa1e6c08c8704276560a.js"></script></body>
+  <script type="text/javascript" src="main.17c94cb2afc73e0e0ea6.js"></script></body>
 </html>
